fixing images not displaying

--- a/index.html
+++ b/index.html
@@ -42,26 +42,14 @@
     <main role="main" class="container mt-5">
         <div class="row mt-5">
             <div class="col-sm-3 mb-4">
-                <img src="images/theo.png" class="rounded-circle img-fluid" alt="Theo Ozer">
+                <img src="images/Profile.jpg" class="rounded-circle img-fluid" alt="Theo Ozer">
             </div>
             <div class="col-sm-9">
                 <h1>Hello!</h1>
-                <p>My Father is Turkish and my Mother is English, in my spare time I learn Turkish as I would like to
-                    talk
-                    to my Grandparents in Turkey. My hobbies consist of football and gaming. I started football when I
-                    was
-                    very young at Clifton Rangers after I went to Beacon Rangers then finally Brighouse Juniors. I am a
-                    very
-                    good listener and work hard when I need to.
+                <p>My Father is Turkish and my Mother is English, in my spare time I learn Turkish as I would like to talk to my Grandparents in Turkey. My hobbies consist of football and gaming. I started football when I was very young at Clifton Rangers after I went to Beacon Rangers then finally Brighouse Juniors.
                 </p>
                 <p>
-                    I began my education at Lightcliffe CofE, then studied my
-                    GCSEs at Brighouse High School and finished my A-levels at Brighouse Sixth Form. My interests reside
-                    in
-                    ICT, this is because I believe that the future will be entirely linked to IT. In IT I like learning
-                    code
-                    and have got a particular interest in Cyber Security as I believe this will be beneficial to keeping
-                    safe in a world that is run by the internet.
+                    I began my education at Lightcliffe CofE, then studied my GCSEs at Brighouse High School and finished my A-levels at Brighouse Sixth Form. My interests reside in ICT, this is because I believe that the future will be entirely linked to IT. In IT I like learning code and have got a particular interest in Cyber Security as I believe this will be beneficial to keeping safe in a world that is run by the internet.
                 </p>
             </div>
         </div>
@@ -70,7 +58,7 @@
 
         <div id="work" class="row mt-5">
             <div class="col-sm-12">
-                <h1>title</h1>
+                <h1>SlideShow</h1>
                 <br />
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -80,29 +68,27 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="images/1.jpg" alt="First slide">
+                            <img class="d-block w-100" src="images/HTML.png" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>title</h5>
-                                <p>Description including a <a href="">link</a> to the work.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/2.jpg" alt="Second slide">
+                            <img class="d-block w-100" src="images/PC1.jpg" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/3.jpg" alt="Third slide">
+                            <img class="d-block w-100" src="images/PC2.jpg" alt="Third slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/4.jpg" alt="Fourth slide">
+                            <img class="d-block w-100" src="images/PC3.jpg" alt="Fourth slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/5.jpg" alt="Fifth slide">
+                            <img class="d-block w-100" src="images/Course1.png" alt="Fifth slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/6.jpg" alt="Sixth slide">
+                            <img class="d-block w-100" src="images/Course2.png" alt="Sixth slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/7.jpg" alt="Seventh slide">
+                            <img class="d-block w-100" src="images/CSS.png" alt="Seventh slide">
                         </div>
 
                     </div>
