--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                 <p>My Father is Turkish and my Mother is English, in my spare time I learn Turkish as I would like to talk to my Grandparents in Turkey. My hobbies consist of football and gaming. I started football when I was very young at Clifton Rangers after I went to Beacon Rangers then finally Brighouse Juniors.
                 </p>
                 <p>
-                    I began my education at Lightcliffe CofE, then studied my GCSEs at Brighouse High School and finished my A-levels at Brighouse Sixth Form. My interests reside in ICT, this is because I believe that the future will be entirely linked to IT. In IT I like learning code and have got a particular interest in Cyber Security as I believe this will be beneficial to keeping safe in a world that is run by the internet.
+                    I began my education at Lightcliffe CofE, then studied my GCSEs at Brighouse High School and finished my A-levels at Brighouse Sixth Form. My interests reside in ICT, this is because I believe that the future will be entirely linked to IT. In IT I like learning code and have got a particular interest in Cyber Security as I believe this will be beneficial to keeping safe in a world that is run by the internet. 
                 </p>
+                <p> I am a confident, reliable and motivated individual with a strong desire to work in the computing industry. I am a good communicator, confident at speaking to people in person or over the phone. I have a can-do attitude and I am a great listener. I have the ability to respond with appropriate, credible feedback in a timely manner. Solving problems is one of my key skills as I can find different ways to solve a problem through trial and error.</p>
             </div>
         </div>
 
@@ -109,14 +110,9 @@
         <div id="experience" class="row mt-5">
             <div class="col-sm-9">
                 <h1>Experience</h1>
-                <p>My Father is Turkish and my Mother is English, in my spare time I learn Turkish as I would like to
-                    talk
-                    to my Grandparents in Turkey. My hobbies consist of football and gaming. I started football when I
-                    was
-                    very young at Clifton Rangers after I went to Beacon Rangers then finally Brighouse Juniors. I am a
-                    very
-                    good listener and work hard when I need to.
-                </p>
+                <p>During my work experience at Henry Boot where I worked in the Finance and IT department. In the finace department I helped build software that managed finances between building sites and in the IT department I helped network new computers for staff, direct emails and allowing staff access to programs. </p> 
+                <p>I have also done a Digital Enterprise award that sets mini challenges that are business and IT based, these challenges included coding, business management and communication. I have recently enroled on a course called Certified information systems security which has proven very useful for my interest in cyber security, this will help me get a better understanding of the topic. I have completed lessons on Code Academy in HTML and CSS which has helped develop my coding skills.</p>
+                <p> I have built my own PC from the graphics card to the CPU and I am using it to code this very website. My previous work has been mostly retail which has helped me with dealing with customers and has given me a hard working mindset. </p>
             </div>
         </div>
 
@@ -126,11 +122,11 @@
             <div class="col-sm-9">
                 <h1>Contact</h1>
                 <div class="card mt-4" style="width: 18rem;">
-                    <img class="card-img-top" src="images/theo.png" alt="Card image cap">
+                    <img class="card-img-top" src="images/Profile.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="mailto:theo.ozer@gmail.com" class="btn btn-primary">Email Me</a>
+                      <h5 class="card-title">Contact Me</h5>
+                      <p class="card-text">If you have any enquiries please contact me through E-mail</p>
+                      <a href="mailto:ozertheo@gmail.com" class="btn btn-primary">Email Me</a>
                     </div>
                   </div>
                 </p>
